Восьмой урок(Исправили небольшие ошибки(осталось только текст))

--- a/formuls.html
+++ b/formuls.html
@@ -14,7 +14,7 @@
     <div class="modal_nav_wrapper">
         <a class="header_link header_mobile_link" href="./index.html">Главная</a>
         <a class="header_link header_mobile_link" href="./lessons.html">Уроки</a>
-        <a class="header_link header_mobile_link" href="./formuls.html">Формулы</a>
+        <a class="header_link header_mobile_link" href="./formuls.html">Калькулятор</a>
     </div>
 </div>
 <div class="container main">
@@ -27,11 +27,11 @@
                 <div id="lesson_dropdown">
                     <a href="./lessons.html#kinematiks">Кинематика</a>
                     <a href="./lessons.html#dinamika">Динамика</a>
-                    <a href="./lessons.html#kinematiks">Статика</a>
-                    <a href="./lessons.html#kinematiks">Ядерная физика</a>
+                    <a href="./lessons.html#static">Статика</a>
+                    <a href="./lessons.html#termodynamic">Термодинамика</a>
                 </div>
             </div>
-            <a class="header_link" href="./formuls.html">Формулы</a>
+            <a class="header_link" href="./formuls.html">Калькулятор</a>
         </div>
         <img src="images/menu.png" id="burger_button">
     </div>
@@ -150,10 +150,10 @@
         <a class="header_link" href="#">Уроки</a>
         <a class="header_link" href="#">Формулы</a>
     </div>
-    <div class="header_wrapper links">
-        <a class="header_link" href="https://t.me/+mu8TZ81DNg44ZGRi"><img src="images/telegram.png"></a>
-        <a class="header_link" href="whatsapp://send?abid=+79156471885&text="><img src="images/whatsapp.png"></a>
-        <a class="header_link" href="mailto:khlopovartem4321@gmail.com"><img src="images/gmail.png"></a>
+    <div class="header_wrapper links header_wrapper_icon">
+        <a class="header_link" href="https://t.me/shkola627"><img src="images/telegram.png"></a>
+        <a class="header_link" href="whatsapp://send?abid=+74959597831&text="><img src="images/whatsapp.png"></a>
+        <a class="header_link" href="mailto:627@edu.mos.ru"><img src="images/gmail.png"></a>
     </div>
 </div>
 </body>
