--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="modal_nav_wrapper">
         <a class="header_link header_mobile_link" href="./index.html">Главная</a>
         <a class="header_link header_mobile_link" href="./lessons.html">Уроки</a>
-        <a class="header_link header_mobile_link" href="./formuls.html">Формулы</a>
+        <a class="header_link header_mobile_link" href="./formuls.html">Калькулятор</a>
     </div>
 </div>
 <div class="container main">
@@ -27,18 +27,18 @@
                 <div id="lesson_dropdown">
                     <a href="./lessons.html#kinematiks">Кинематика</a>
                     <a href="./lessons.html#dinamika">Динамика</a>
-                    <a href="./lessons.html#kinematiks">Статика</a>
-                    <a href="./lessons.html#kinematiks">Ядерная физика</a>
+                    <a href="./lessons.html#static">Статика</a>
+                    <a href="./lessons.html#termodynamic">Термодинамика</a>
                 </div>
             </div>
-            <a class="header_link" href="./formuls.html">Формулы</a>
+            <a class="header_link" href="./formuls.html">Калькулятор</a>
         </div>
         <img src="images/menu.png" id="burger_button">
     </div>
     <div></div>
     <div class="title">
-        <h1>Проект</h1>
-        <h3 class="subtitle">Мы крутые</h3>
+        <h1>Образовательный портал по физике</h1>
+        <h3 class="subtitle">«Всё в мире является энергией. Энергия лежит в основе всего. Если вы настроитесь на энергетическую частоту той реальности, которую хотите создать для себя, то вы получите именно то, на что настроена ваша частота. Это – не философия. Это – физика». Альберт Эйнштейн</h3>
     </div>
     <a id="circle" href="#about">
         <img src="images/icon_down.png" style="width: 40px; height: 40px; margin: auto"/>
@@ -73,22 +73,22 @@
     <h2>Наши преподаватели</h2>
     <div class="teachers-list">
         <div class="teacher-item">
-            <img src="images/img_1.png" class="teacher-item-image"/>
-            <h3>Алексеева Ольга Александровна</h3>
+            <img src="images/img_1.jpeg" class="teacher-item-image"/>
+            <h3>Кувшинов Алексей Алексеевич</h3>
             <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников,
                 детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга.
                 Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
         </div>
         <div class="teacher-item">
-            <img src="images/img_1.png" class="teacher-item-image"/>
-            <h3>Алексеева Ольга Александровна</h3>
+            <img src="images/img_2.jpeg" class="teacher-item-image"/>
+            <h3>Шамов Артём Дмитриевич</h3>
             <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников,
                 детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга.
                 Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
         </div>
         <div class="teacher-item">
-            <img src="images/img_1.png" class="teacher-item-image"/>
-            <h3>Алексеева Ольга Александровна</h3>
+            <img src="images/img_3.jpeg" class="teacher-item-image"/>
+            <h3>Ломоносов Антон Владимирович</h3>
             <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников,
                 детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга.
                 Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
@@ -98,9 +98,9 @@
 <div class="container footer">
     <img src="images/logo.png" class="logo logo_footer">
     <div class="header_wrapper links header_wrapper_icon">
-        <a class="header_link" href="https://t.me/+mu8TZ81DNg44ZGRi"><img src="images/telegram.png"></a>
-        <a class="header_link" href="whatsapp://send?abid=+79156471885&text="><img src="images/whatsapp.png"></a>
-        <a class="header_link" href="mailto:khlopovartem4321@gmail.com"><img src="images/gmail.png"></a>
+        <a class="header_link" href="https://t.me/shkola627"><img src="images/telegram.png"></a>
+        <a class="header_link" href="whatsapp://send?abid=+74959597831&text="><img src="images/whatsapp.png"></a>
+        <a class="header_link" href="mailto:627@edu.mos.ru"><img src="images/gmail.png"></a>
     </div>
 </div>
 </body>
